# kasmcloud

./: .gitignore  Cargo.toml  Makefile  PROJECT  README.md  go.mod  sample.yaml
api/v1alpha1/: actor_types.go  actor_webhook.go  groupversion_info.go  kasmcloudhost_types.go  link_types.go  link_webhook.go  provider_types.go  provider_webhook.go  types.go  webhook_suite_test.go  zz_generated.deepcopy.go
cmd/webhook/: main.go
crates/apis/: Cargo.toml
crates/apis/src/: lib.rs
crates/apis/src/kasmcloud/v1alpha1/: actor.rs  claims.rs  link_definition.rs  mod.rs  provider.rs
crates/apis/src/v1alpha1/: actor.rs  claims.rs  host.rs  link.rs  mod.rs  provider.rs
crates/host/: Cargo.toml
crates/host/src/: actor.rs  handler.rs  lib.rs  provider.rs
deploy/: crd.yaml  kasmcloud.yaml  kasmcloud_host_daemonset.yaml  kasmcloud_host_default.yaml  kasmcloud_host_deployment.yaml  kasmcloud_host_rbac.yaml  rbac.yaml
deploy/crd/: kasmcloud.io_actors.yaml  kasmcloud.io_links.yaml
deploy/crds/: kasmcloud.io_kasmcloudhosts.yaml  kasmcloud.io_providers.yaml
deploy/webhook/: kasmcloud_webhook_manifests.yaml  kasmcloud_webhook_server.yaml
src/: main.rs
