[package]
name = "kasmcloud-apis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { workspace = true, features = ["schemars", "v1_27"]}
kube = { workspace = true,  features = ["gzip", "jsonpatch", "runtime", "derive"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
